--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "vue": "^3.0.0-rc.1",
     "ant-design-vue": "^2.0.0-beta.15",
-    "fdui":""
+    "axios": "^0.21.0"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-rc.1",
